--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
 
 <!--  for company name and description -->
     <div class="footer-items">
-      <h1>Company Name</h1>
-      <p>Description of any product or motto of the company.</p>
+      <h1>Sheba</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,  </p>
     </div>
 
 <!--  for quick links  -->
@@ -184,21 +184,21 @@
       <div class="border1"></div> <!--for the underline -->
         <ul>
           <a href="#"><li>Home</li></a>
-          <a href="#"><li>Search</li></a>
-          <a href="#"><li>Contact</li></a>
           <a href="#"><li>About</li></a>
+          <a href="#"><li>Service</li></a>
+          <a href="#"><li>Contact</li></a>
         </ul>
     </div>
 
 <!--  for some other links -->
     <div class="footer-items">
-      <h3>Recipes</h3>
+      <h3>Services</h3>
       <div class="border1"></div>  <!--for the underline -->
         <ul>
-          <a href="#"><li>Indian</li></a>
-          <a href="#"><li>Chinese</li></a>
-          <a href="#"><li>Mexican</li></a>
-          <a href="#"><li>Italian</li></a>
+          <a href="#"><li>UI</li></a>
+          <a href="#"><li>front end</li></a>
+          <a href="#"><li>desginer</li></a>
+          <a href="#"><li>developer</li></a>
         </ul>
     </div>
 
@@ -207,23 +207,17 @@
       <h3>Contact us</h3>
       <div class="border1"></div>
         <ul>
-          <li><i class="fa fa-map-marker" aria-hidden="true"></i>XYZ, abc</li>
-          <li><i class="fa fa-phone" aria-hidden="true"></i>123456789</li>
-          <li><i class="fa fa-envelope" aria-hidden="true"></i>xyz@gmail.com</li>
+          <li><i class="fa fa-map-marker" aria-hidden="true"></i>Yemen, sanaa</li>
+          <li><i class="fa fa-phone" aria-hidden="true"></i>770025168</li>
+          <li><i class="fa fa-envelope" aria-hidden="true"></i>sabaa.alshamery@gmail.com</li>
         </ul> 
       
-<!--   for social links -->
-        <div class="social-media">
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-facebook"></i></a>
-          <a href="#"><i class="fab fa-google-plus-square"></i></a>
-        </div> 
     </div>
   </div>
   
 <!--   Footer Bottom start  -->
   <div class="footer-bottom">
-    Copyright &copy; Food and Burps 2020.
+    Copyright &copy;Sheba.
   </div>
 </div>
   <!-- end footer -->
