--- a/index.html
+++ b/index.html
@@ -35,11 +35,14 @@
 
         <h2>Sabaa Alshamery</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi,
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi,
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi,
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi,
-          quae?
+          Colllaborative Technology Intern with experience designing websites
+          Skilled in project coordination and meeting customer expectations.
+          Adept working with [Tailwind] computer languages and coding.
+          Canuse Photoshop and Illustrator programs. Also,canuse XD for
+          visualizing websites and apps.Designing websites with[Joomla]
+          language. Knowledgeable Database Developer with
+          knowledgein[MySql]database systems.Can Learn any new
+          technology program.
         </p>
       </div>
     </div>
@@ -63,8 +66,7 @@
 
         <h2>Web Design</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi,
-          quae?
+          Designer for yemenapp website
         </p>
       </div>
       <div class="service">
@@ -72,8 +74,7 @@
 
         <h2>Marketing</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi,
-          quae?
+          can talk to other companies maager and deal with any meatings
         </p>
       </div>
       <div class="service">
@@ -81,8 +82,7 @@
 
         <h2>Graphics</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi,
-          quae?
+          Desgin with photoshop and iullistrator
         </p>
       </div>
 
@@ -98,11 +98,15 @@
       <div class="about-section-row">
         <div class="about-section-col">
           <div class="about">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-              ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-              fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-              mollit anim id est laborum.</p>
+            <p>
+              •Very good in designing. </p>
+              <p>   •Very good in making decision and presentations. </p>
+                <p>   •Excellent in using computer and internet. </p>
+                  <p>   •Very good in speaking and writing English. </p>
+                    <p> •Excellent Organizationand communication skills. </p>
+                      <p>  •Excellent attentionto detail. </p>
+                        <p>  •Calmunder pressure. </p>
+            </p>
 
           </div>
         </div>
@@ -168,58 +172,76 @@
 
 
   <!-- footer -->
-  
-<div class="footer">
-  <div class="inner-footer">
 
-<!--  for company name and description -->
-    <div class="footer-items">
-      <h1>Sheba</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,  </p>
-    </div>
+  <div class="footer">
+    <div class="inner-footer">
 
-<!--  for quick links  -->
-    <div class="footer-items">
-      <h3>Quick Links</h3>
-      <div class="border1"></div> <!--for the underline -->
+      <!--  for company name and description -->
+      <div class="footer-items">
+        <h1>Sheba</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, </p>
+      </div>
+
+      <!--  for quick links  -->
+      <div class="footer-items">
+        <h3>Quick Links</h3>
+        <div class="border1"></div>
+        <!--for the underline -->
         <ul>
-          <a href="#"><li>Home</li></a>
-          <a href="#"><li>About</li></a>
-          <a href="#"><li>Service</li></a>
-          <a href="#"><li>Contact</li></a>
+          <a href="#">
+            <li>Home</li>
+          </a>
+          <a href="#">
+            <li>About</li>
+          </a>
+          <a href="#">
+            <li>Service</li>
+          </a>
+          <a href="#">
+            <li>Contact</li>
+          </a>
         </ul>
-    </div>
+      </div>
 
-<!--  for some other links -->
-    <div class="footer-items">
-      <h3>Services</h3>
-      <div class="border1"></div>  <!--for the underline -->
+      <!--  for some other links -->
+      <div class="footer-items">
+        <h3>Services</h3>
+        <div class="border1"></div>
+        <!--for the underline -->
         <ul>
-          <a href="#"><li>UI</li></a>
-          <a href="#"><li>front end</li></a>
-          <a href="#"><li>desginer</li></a>
-          <a href="#"><li>developer</li></a>
+          <a href="#">
+            <li>UI</li>
+          </a>
+          <a href="#">
+            <li>front end</li>
+          </a>
+          <a href="#">
+            <li>desginer</li>
+          </a>
+          <a href="#">
+            <li>developer</li>
+          </a>
         </ul>
-    </div>
+      </div>
 
-<!--  for contact us info -->
-    <div class="footer-items">
-      <h3>Contact us</h3>
-      <div class="border1"></div>
+      <!--  for contact us info -->
+      <div class="footer-items">
+        <h3>Contact us</h3>
+        <div class="border1"></div>
         <ul>
           <li><i class="fa fa-map-marker" aria-hidden="true"></i>Yemen, sanaa</li>
           <li><i class="fa fa-phone" aria-hidden="true"></i>770025168</li>
           <li><i class="fa fa-envelope" aria-hidden="true"></i>sabaa.alshamery@gmail.com</li>
-        </ul> 
-      
+        </ul>
+
+      </div>
+    </div>
+
+    <!--   Footer Bottom start  -->
+    <div class="footer-bottom">
+      Copyright &copy;Sheba.
     </div>
   </div>
-  
-<!--   Footer Bottom start  -->
-  <div class="footer-bottom">
-    Copyright &copy;Sheba.
-  </div>
-</div>
   <!-- end footer -->
 </body>
 
