--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <div class="logo">Sheba</div>
     <!-- NAVIGATION MENU -->
     <ul class="nav-links">
+   <!-- USING CHECKBOX HACK -->
+   <input type="checkbox" id="checkbox_toggle" />
+   <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+   <!-- NAVIGATION MENUS -->
 
       <div class="menu">
         <li><a href="/">Home</a></li>
@@ -179,7 +183,7 @@
       <!--  for company name and description -->
       <div class="footer-items">
         <h1>Sheba</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, </p>
+        <p>front end & UI </p>
       </div>
 
       <!--  for quick links  -->
@@ -229,9 +233,9 @@
         <h3>Contact us</h3>
         <div class="border1"></div>
         <ul>
-          <li><i class="fa fa-map-marker" aria-hidden="true"></i>Yemen, sanaa</li>
-          <li><i class="fa fa-phone" aria-hidden="true"></i>770025168</li>
-          <li><i class="fa fa-envelope" aria-hidden="true"></i>sabaa.alshamery@gmail.com</li>
+          <li>Yemen, sanaa</li>
+          <li>770025168</li>
+          <li>sabaa.alshamery@gmail.com</li>
         </ul>
 
       </div>
