--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <div class="logo">Sheba</div>
     <!-- NAVIGATION MENU -->
     <ul class="nav-links">
-   <!-- USING CHECKBOX HACK -->
-   <input type="checkbox" id="checkbox_toggle" />
-   <label for="checkbox_toggle" class="hamburger">&#9776;</label>
-   <!-- NAVIGATION MENUS -->
+      <!-- USING CHECKBOX HACK -->
+      <input type="checkbox" id="checkbox_toggle" />
+      <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+      <!-- NAVIGATION MENUS -->
 
       <div class="menu">
         <li><a href="/">Home</a></li>
@@ -35,10 +35,20 @@
   <div class="row">
 
     <div class="col-7">
-      <div class="service">
+      <div class="nameinfo">
 
-        <h2>Sabaa Alshamery</h2>
-        <p>
+        <div class="container">
+
+          <h1>Sabaa Alshamery</h1>
+        </div>
+
+
+
+
+
+        <h3>FRONT END DEVELOPER</h3>
+
+        <h4>
           Colllaborative Technology Intern with experience designing websites
           Skilled in project coordination and meeting customer expectations.
           Adept working with [Tailwind] computer languages and coding.
@@ -47,53 +57,18 @@
           language. Knowledgeable Database Developer with
           knowledgein[MySql]database systems.Can Learn any new
           technology program.
-        </p>
+        </h4>
       </div>
     </div>
     <div class="col-5">
-      <img src="images/undraw_farm_girl_dnpe.png" alt="" class="mtimage">
 
+      <div>
+        <img src="images/undraw_farm_girl_dnpe.png" alt="" class="mtimage">
+
+      </div>
     </div>
   </div>
   <!-- end sec1 -->
-
-  <!-- sec2 -->
-
-
-
-
-  <div class="container">
-    <h1>My Services</h1>
-    <div class="row">
-      <div class="service">
-        <img src="images/undraw_Smartwatch_re_59lx.png" alt="" class="max-w-full">
-
-        <h2>Web Design</h2>
-        <p>
-          Designer for yemenapp website
-        </p>
-      </div>
-      <div class="service">
-        <img src="images/undraw_Teacher_re_sico.png" alt="" class="max-w-full">
-
-        <h2>Marketing</h2>
-        <p>
-          can talk to other companies maager and deal with any meatings
-        </p>
-      </div>
-      <div class="service">
-        <img src="images/undraw_Social_girl_re_kdrx.png" alt="" class="max-w-full">
-
-        <h2>Graphics</h2>
-        <p>
-          Desgin with photoshop and iullistrator
-        </p>
-      </div>
-
-    </div>
-  </div>
-  <!-- end sec2 -->
-
 
   <!-- sec3 -->
   <div class=" container about-section">
@@ -104,12 +79,12 @@
           <div class="about">
             <p>
               •Very good in designing. </p>
-              <p>   •Very good in making decision and presentations. </p>
-                <p>   •Excellent in using computer and internet. </p>
-                  <p>   •Very good in speaking and writing English. </p>
-                    <p> •Excellent Organizationand communication skills. </p>
-                      <p>  •Excellent attentionto detail. </p>
-                        <p>  •Calmunder pressure. </p>
+            <p> •Very good in making decision and presentations. </p>
+            <p> •Excellent in using computer and internet. </p>
+            <p> •Very good in speaking and writing English. </p>
+            <p> •Excellent Organizationand communication skills. </p>
+            <p> •Excellent attentionto detail. </p>
+            <p> •Calmunder pressure. </p>
             </p>
 
           </div>
@@ -142,6 +117,55 @@
 
   <!-- end sec3 -->
 
+  <!-- sec2 -->
+
+
+
+
+  <div class="container">
+    <h1>My Services</h1>
+    <div class="row">
+      <div class="service">
+
+        <img src="images/undraw_Smartwatch_re_59lx.png" alt="" class="max-w-full">
+
+        <h2>Web Design</h2>
+        <p>
+          Designer for yemenapp website
+        </p>
+      </div>
+      <div class="service">
+        <img src="images/undraw_Teacher_re_sico.png" alt="" class="max-w-full">
+
+        <h2>Marketing</h2>
+        <p>
+          can talk to other companies maager and deal with any meatings
+        </p>
+      </div>
+      <div class="service">
+        <img src="images/undraw_Social_girl_re_kdrx.png" alt="" class="max-w-full">
+
+        <h2>Graphics</h2>
+        <p>
+          Desgin with photoshop and iullistrator
+        </p>
+      </div>
+
+    </div>
+  </div>
+  <!-- end sec2 -->
+
+
+  <!-- sec5 -->
+  <!-- <div class=" container about-section">
+    <div class="inner-width container">
+      <h1>My Works</h1>
+     
+    </div>
+  </div>-->
+
+  <!-- end sec5 -->
+
   <!-- sec4 -->
   <div class="container">
     <h1>Contact Me</h1>
@@ -153,21 +177,32 @@
     <div class="profile-details">
       <div>
 
-        <ul>
-          <div>First Number</div>
-          <div id="profile-first-number">770025168</div>
+        <div class="formdesgin">
+          <form id="form" class="form">
+            <h6>Register With Us</h6>
+            <div class="form-control">
+              <label for="username">Username</label>
+              <input type="text" id="username" placeholder="Enter Username">
+              <small>Error Message</small>
+            </div>
+            <div class="form-control">
+              <label for="email">Email</label>
+              <input type="text" id="email" placeholder="Enter email">
+              <small>Error Message</small>
+            </div>
+
+            <div class="form-control">
+              <label for="phoneNumber">Phone</label>
+              <input type="text" id="phoneNumber" placeholder="Enter Phone">
+              <small>Error Message</small>
+            </div>
 
 
-          <div>Primary Email</div>
-          <div id="profile-primary-email">sabaa.alshamery.com</div>
+            <button>Submit</button>
+          </form>
+        </div>
 
-          <div>githup</div>
-          <div id="profile-secondary-email">https://github.com/shebaal</div>
 
-          <div>job</div>
-          <div id="profile-notes">front end </div>
-
-        </ul>
       </div>
     </div>
   </div>
@@ -248,5 +283,115 @@
   </div>
   <!-- end footer -->
 </body>
+
+
+
+<script>
+  const form = document.getElementById('form');
+  const username = document.getElementById('username');
+  const email = document.getElementById('email');
+  const phoneNumber = document.getElementById('phoneNumber');
+
+
+  //Show input error messages
+  function showError(input, message) {
+    const formControl = input.parentElement;
+    formControl.className = 'form-control error';
+    const small = formControl.querySelector('small');
+    small.innerText = message;
+  }
+
+
+  //show success colour
+  function showSucces(input) {
+    const formControl = input.parentElement;
+    formControl.className = 'form-control success';
+  }
+
+
+
+  //check email is valid
+  function checkEmail(input) {
+    const re = /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
+    if (re.test(input.value.trim())) {
+      showSucces(input)
+    } else {
+      showError(input, 'Email is not invalid');
+    }
+  }
+
+  // check phone
+  function checkphone(input) {
+    var phoneno = /^[7]{3}?[0-9]{6}$/;
+    if ((input.value.match(phoneno))) {
+      showSucces(input);
+    }
+    else {
+      showError(input, `${getFieldName(input)} is less than 9`)
+    }
+  }
+
+
+
+
+
+
+
+  //checkRequired fields
+  function checkRequired(inputArr) {
+
+    inputArr.forEach(function (input) {
+      if (input.value.trim() === '') {
+        showError(input, `${getFieldName(input)} is required`)
+      } else {
+        showSucces(input);
+      }
+    });
+
+
+
+
+  }
+
+
+
+
+  //check input Length
+  function checkLength(input, min, max) {
+    if (input.value.length < min) {
+      showError(input, `${getFieldName(input)} must be at least ${min} characters`);
+    } else if (input.value.length > max) {
+      showError(input, `${getFieldName(input)} must be les than ${max} characters`);
+    } else {
+      showSucces(input);
+    }
+  }
+
+  //get FieldName
+  function getFieldName(input) {
+    return input.id.charAt(0).toUpperCase() + input.id.slice(1);
+  }
+
+
+
+  //Event Listeners
+  form.addEventListener('submit', function (e) {
+    e.preventDefault();
+
+    checkRequired([username, email, phoneNumber]);
+
+    checkLength(username, 3, 10);
+
+    checkEmail(email);
+
+    checkphone(phoneNumber);
+
+
+  });
+
+
+
+
+</script>
 
 </html>
