--- a/index.html
+++ b/index.html
@@ -43,9 +43,6 @@
         </div>
 
 
-
-
-
         <h3>FRONT END DEVELOPER</h3>
 
         <h4>
@@ -63,14 +60,17 @@
     <div class="col-5">
 
       <div>
-        <img src="images/undraw_farm_girl_dnpe.png" alt="" class="mtimage">
+        <!-- <img src="images/undraw_farm_girl_dnpe.png" alt="" class="mtimage"> -->
+        <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+        <lottie-player src="https://assets1.lottiefiles.com/packages/lf20_zvkr2yw6.json" background="transparent"
+          speed="1" style="width: 500px; height: 500px;" hover autoplay></lottie-player>
 
       </div>
     </div>
   </div>
   <!-- end sec1 -->
 
-  <!-- sec3 -->
+  <!-- sec2 -->
   <div class=" container about-section">
     <div class="inner-width container">
       <h1>About Me</h1>
@@ -115,9 +115,9 @@
     </div>
   </div>
 
-  <!-- end sec3 -->
+  <!-- end sec2 -->
 
-  <!-- sec2 -->
+  <!-- sec3 -->
 
 
 
@@ -153,18 +153,9 @@
 
     </div>
   </div>
-  <!-- end sec2 -->
+  <!-- end sec3 -->
 
 
-  <!-- sec5 -->
-  <!-- <div class=" container about-section">
-    <div class="inner-width container">
-      <h1>My Works</h1>
-     
-    </div>
-  </div>-->
-
-  <!-- end sec5 -->
 
   <!-- sec4 -->
   <div class="container">
@@ -172,7 +163,10 @@
   </div>
   <div class="profile-wrapper">
     <div class="profile-picture">
-      <img id="profile-picture" src="images/undraw_Opinion_re_jix4.png">
+      <!-- <img id="profile-picture" src="images/undraw_Opinion_re_jix4.png"> -->
+      <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+      <lottie-player src="https://assets10.lottiefiles.com/packages/lf20_xjy3j2io.json" background="transparent"
+        speed="1" style="width: 500px; height: 500px;" hover autoplay></lottie-player>
     </div>
     <div class="profile-details">
       <div>
