--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <!-- <img src="images/undraw_farm_girl_dnpe.png" alt="" class="mtimage"> -->
         <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
         <lottie-player src="https://assets1.lottiefiles.com/packages/lf20_zvkr2yw6.json" background="transparent"
-          speed="1" style="width: 500px; height: 500px;" hover autoplay></lottie-player>
+          speed="1" style="width: 500px; height: 500px;" loop autoplay></lottie-player>
 
       </div>
     </div>
@@ -203,7 +203,54 @@
 
   <!-- end sec4 -->
 
+  <!-- sec5 -->
+  <div class=" container about-section">
+    <div class="inner-width container">
+      <h1>Some Works</h1>
+      <div class="makeflex">
 
+        <div>
+          <img class="modal-target" alt="Img 1" src="images/a.png" />
+        </div>
+        <div>
+          <img class="modal-target" alt="Img 2" src="images/b.png" />
+        </div>
+        <div>
+          <img class="modal-target" alt="Img 3" src="images/c.png" />
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+  <!-- The Modal -->
+  <div id="modal" class="modal">
+    <span id="modal-close" class="modal-close">&times;</span>
+    <img id="modal-content" class="modal-content">
+    <div id="modal-caption" class="modal-caption"></div>
+  </div>
+  <!-- end sec5 -->
+  <!-- darkmode -->
+ 
+  <div class="container centering">
+    
+      <h1>Switch to dark</h1>
+  <div onclick="myFunction()">
+
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <lottie-player src="https://assets3.lottiefiles.com/packages/lf20_wxnikkzp.json" speed="1"
+      style="width: 350px; height: 350px;" loop autoplay></lottie-player>
+  </div>
+  </div>
+  
+
+  <script>
+    function myFunction() {
+      var element = document.body;
+      element.classList.toggle("dark");
+    }
+  </script>
+  <!-- end darkmode -->
   <!-- footer -->
 
   <div class="footer">
@@ -384,6 +431,26 @@
   });
 
 
+  // image section in java
+  // Modal Setup
+  var modal = document.getElementById('modal');
+
+  var modalClose = document.getElementById('modal-close');
+  modalClose.addEventListener('click', function () {
+    modal.style.display = "none";
+  });
+
+  // global handler
+  document.addEventListener('click', function (e) {
+    if (e.target.className.indexOf('modal-target') !== -1) {
+      var img = e.target;
+      var modalImg = document.getElementById("modal-content");
+      var captionText = document.getElementById("modal-caption");
+      modal.style.display = "block";
+      modalImg.src = img.src;
+      captionText.innerHTML = img.alt;
+    }
+  });
 
 
 </script>
