--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 <body>
   <nav class="navbar">
-    <!-- LOGO -->
+    <!-- logo -->
     <div class="logo">Sheba</div>
-    <!-- NAVIGATION MENU -->
+    <!--navigation menu -->
     <ul class="nav-links">
-      <!-- USING CHECKBOX HACK -->
+      <!-- checkbox hack-->
       <input type="checkbox" id="checkbox_toggle" />
       <label for="checkbox_toggle" class="hamburger">&#9776;</label>
       <!-- NAVIGATION MENUS -->
